// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertOutputsGenerator should convert properly 1`] = `
"
import { Component, Output, EventEmitter } from '@angular/core';
import { output } from "@angular/core";
import { outputFromObservable } from "@angular/core/rxjs-interop";

@Component({
  template: \` \`
})
export class MyCmp {
  someObservable$ = of('test');

  outputWithoutType = output();
  normalOutput = output<string>();
  withObservable = outputFromObservable(this.someObservable$);
  aliasOutput = output<string>({ alias: 'withAlias' });

  ngOnInit() {
    let imABoolean = false;
    console.log(this.outputWithoutType);

    if (this.withTransform) {
      this.normalOutput.emit('test');
    }
  }

  handleClick() {
    if (true) {
      let test = this.outputWithoutType + this.normalOutput;
    }
  }

;
;
;
;
}
"
`;

exports[`convertOutputsGenerator should not add outputFromObservable import if not needed 1`] = `
"
import { Component, Output, EventEmitter } from '@angular/core';
import { output } from "@angular/core";

@Component({
  template: \` \`
})
export class MyCmp {
  outputWithoutType = output();
  normalOutput = output<string>();
;
;
}
"
`;
